Current:
Ryan C. Gordon (???) - Thu May 18 03:37:58 PDT 2006
 * EULAs can be optionally skipped when doing a reinstall.
 * Reinstall can now be completely noninteractive, for automatic upgrades of
   existing installations to newer versions.
Ryan C. Gordon (???) - Wed May 17 17:33:25 PDT 2006
 * Fixed an incorrect gladefile reference (gtk+ warning on symlink checkbox).
Stephane Peter (Codehost) - Wed Mar 29 15:37:18 PST 2006
 * Added booleans subsystem with support for complex expressions in
   most installer tags.
Stephane Peter (Codehost) - Wed Mar 15 12:39:34 PST 2006
 * Make fork on binary start optional, through root "fork" attribute.
Stephane Peter (Codehost) - Thu Mar  9 11:09:13 PST 2006
 * Allow reverse matching on distro, arch and glibc tags with ! prefix.
Stephane Peter (Codehost) - Mon Mar  6 18:00:40 PST 2006
 * Added support for SELinux context attributes for files
 * GTK2 cleanups and fixes to use libxml2
Jeremy White (Codeweavers) - Tue Feb  7 15:37:28 PST 2006
 * Preliminary optional GTK2 support
 * Added support for program_to_start XML element
 * Do not link with GPM library when not needed
Ryan C. Gordon (icculus.org) - Fri Jan 27 16:35:25 EST 2006
 * Intel Mac support.
Ryan C. Gordon (icculus.org) - Fri Jun 17 00:15:51 EDT 2005
 * Patched so binary built on MacOSX Tiger will still run on Panther.
Ryan C. Gordon (icculus.org) - Wed May 18 11:40:10 EDT 2005
 * Added appbundleid and appbundledesc to setup.xml install tag (MacOS only).
Ryan C. Gordon (icculus.org) - Tue May 17 12:21:23 EDT 2005
 * Added .rar archive plugin.
Ryan C. Gordon (icculus.org) - Sat Nov 20 08:42:16 EST 2004
 * Minor carbon_ui tweaks and corrections to update function.
Ludwig Nussel - Wed Nov 10 14:21:21 PST 2004
 * Added support for inline binary scripts.
Ludwig Nussel - Mon Nov  1 19:39:21 PST 2004
 * New 'suffix' attribute to the files element to force plugins to be used.
 * Fixes in ZIP plugin
 * New 'productdir' attribute for meta-installers to change the directory