@@ -276,6 +276,9 @@ extern int GetProductPromptOverwrite(install_info *info);
 /** whether the product should reinstall with _zero_ user interaction. */
 int GetProductReinstallFast(install_info *info);
 
+/** whether the product should not installe Gnome/KDE/etc menu items */
+int GetProductInstallMenuItems(install_info *info);
+
 /** check if product can be installed. Returns NULL if product can be
  * installed, otherwise reason why not. */
 extern const char *IsReadyToInstall(install_info *info);
